<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgotpass"
    android:gravity="center"
    android:onClick="hidekeyboard"
    android:orientation="vertical"
    tools:context=".ForgotPass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:gravity="center">



            <EditText
                android:id="@+id/usr"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:hint="@string/Username" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/search"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/btnbg"
            android:text="Search"
            android:textColor="@color/txt"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/ques"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/ScecurityQuestion"
            android:textAlignment="center"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/aser"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:hint="@string/Answar" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/btnbg"
            android:text="Submit"
            android:textColor="@color/txt"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>