<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddPassword"
    android:background="@drawable/addpass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/acctitle"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:hint="@string/AccountTitle"
                android:textAlignment="center"
                android:textColor="@color/txt"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accuser"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:hint="@string/Username"
                android:textAlignment="center"
                android:textColor="@color/txt"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accemail"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:hint="@string/Email"
                android:textAlignment="center"
                android:textColor="@color/txt"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/accpass"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/txt"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/addpss"
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:text="ADD Password"
            android:background="@drawable/btnbg"
            android:textColor="@color/txt"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>