<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:gravity="center"
    android:orientation="vertical"
    android:onClick="hidekeyboard"
    tools:context=".SingUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/sguuser"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/Username"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/txt"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sgupass"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/txt"
                 />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sgucfrmpass"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/ConfirmPassword"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/txt"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/secques"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/ScecurityQuestion"
                android:textAlignment="center"
                android:textColor="@color/txt"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|bottom"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hinttxt"
            app:passwordToggleDrawable="@drawable/passwordtoggle"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/secans"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/Answer"
                android:textAlignment="center"
                android:textColor="@color/txt"
                 />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/singup"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/btnbg"
            android:text="Sign UP"
            android:textColor="@color/txt"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>