<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addpass"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UpdatePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/srcusername"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="@drawable/textfieldbg"
            android:hint="Enter Username"
            android:textAlignment="center" />

        <Button
            android:id="@+id/upodtsearch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/customsearch" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center">


        <EditText
            android:id="@+id/updtid"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="ID"
            android:textAlignment="center"
            android:textColor="@color/txt"
            android:textSize="20sp"
            android:editable="false"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center">


        <EditText
            android:id="@+id/updtuser"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/Username"
            android:textAlignment="center"
            android:textColor="@color/txt"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center">


        <EditText
            android:id="@+id/updtemail"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:hint="@string/Email"
            android:textAlignment="center"
            android:textColor="@color/txt"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center">


        <EditText
            android:id="@+id/updtpass"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textColor="@color/txt"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/updtp"
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:background="@drawable/btnbg"
            android:text="Update"
            android:textColor="@color/txt"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>